# menuentry

./: LICENSE  README.md  pyproject.toml
src/menuentry/: __init__.py  app.py  desktop_file.py
