[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menuentry"
version = "0.1.0"
description = "A lightweight TUI menu entry manager for Linux desktop files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
]

[project.scripts]
menuentry = "menuentry.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/menuentry"]
