[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menuentry"
version = "0.1.0"
description = "A lightweight TUI menu entry manager for Linux desktop files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "beantownbytes" },
]
keywords = ["desktop", "menu", "tui", "linux", "freedesktop", "desktop-entry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/beantownbytes/menuentry"
Repository = "https://github.com/beantownbytes/menuentry"
Issues = "https://github.com/beantownbytes/menuentry/issues"

[project.scripts]
menuentry = "menuentry.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/menuentry"]
